Minor improvements, code cleaning, pom updates.